--- a/css/main.css
+++ b/css/main.css
@@ -25,10 +25,14 @@ img {
 
 header {
   background-image: url("../images/anchors.svg");
+  background-color: #1e7c74;
   color: #fff;
   font-size: 1.125rem;
   font-style: normal;
   font-weight: normal;
+}
+
+.top {
   padding: 1rem;
 }
 
@@ -57,6 +61,7 @@ article header {
 }
 
 h1 {
+  display: block;
   margin: 0;
   color: #fff;
   font-weight: normal;
@@ -70,23 +75,37 @@ h2 {
   font-size: 1.75rem;
 }
 
+.header {
+  display: block;
+  padding: .5rem;
+  margin-right: 17em;
+}
+
+.flex {
+  display: flex;
+  border: 4px solid #259f95;
+  border-radius: .25em;
+  background-color: #259f95;
+}
+
 nav ul {
   display: flex;
   align-items: center;
   list-style-type: none;
-  margin: 0;
+  margin-top: 1rem;
   padding: 0;
 }
 
 nav a {
   display: flex;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: flex-start;
   align-items: center;
   background-color: transparent;
   border: 0;
   border-radius: 6px;
   color: #fff;
-  padding: 0.5rem;
+  padding: .5rem;
   width: 2.5rem;
   height: 2.5rem;
 }
@@ -156,5 +175,6 @@ footer {
   justify-content: center;
   padding: 1rem;
   background-image: url("../images/anchors.svg");
+  background-color: #1e7c74;
   color: #fff;
 }
